bookstore-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api-service
spec:
  selector:
    app: bookstore-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
