bookstore-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-api-ingress
spec:
  rules:
    - host: api.bookstore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstore-api-service
                port:
                  number: 80
